[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-datastructures-algorithms"
version = "0.1.0"
description = "DSA practice in Python, organized by reusable templates"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name" }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E","F","I","N","UP","B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true

